--- a/.gitignore
+++ b/.gitignore
@@ -652,3 +652,6 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/c,vim,c++,linux,cmake,clion,emacs,windows,visualstudio,visualstudiocode
+
+# build directory
+build
