--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/actor-framework"]
 	path = external/actor-framework
 	url = git@github.com:CppPhil/actor-framework.git
+[submodule "external/jaeger-client-cpp"]
+	path = external/jaeger-client-cpp
+	url = https://github.com/jaegertracing/jaeger-client-cpp.git
