--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,24 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+include(HunterGate)
+
+HunterGate(
+    URL "https://github.com/cpp-pm/hunter/archive/v0.23.249.tar.gz"
+    SHA1 "d45d77d8bba9da13e9290a180e0477e90accd89b"
+)
+
 project(CAF_ShiViz_Trial VERSION 1.0.0)
 
 execute_process(
     COMMAND bash ${CAF_ShiViz_Trial_SOURCE_DIR}/scripts/build_caf.sh
 )
 
-set(CMAKE_MODULE_PATH ${CAF_ShiViz_Trial_SOURCE_DIR}/cmake)
 set(CAF_ROOT_DIR ${CAF_ShiViz_Trial_SOURCE_DIR}/build/caf)
 find_package(CAF COMPONENTS core io test)
 
-string(APPEND CMAKE_CXX_FLAGS " -Werror -Wall -Wextra -Wcast-align -Wcast-qual -Wmissing-field-initializers -Wmissing-include-dirs -Wpointer-arith -Wstack-protector -Wstrict-aliasing=2 -Wunreachable-code -Wlogical-op -Wduplicated-cond -Wnull-dereference -Wrestrict -Wno-unknown-pragmas -Wno-unused-function -Wno-deprecated-copy -Wno-pessimizing-move")
+string(APPEND CMAKE_CXX_FLAGS " -Werror -Wall -Wextra -Wcast-align -Wcast-qual -Wmissing-field-initializers -Wmissing-include-dirs -Wpointer-arith -Wstack-protector -Wstrict-aliasing=2 -Wunreachable-code -Wlogical-op -Wduplicated-cond -Wnull-dereference -Wno-unused-parameter")
 string(APPEND CMAKE_CXX_FLAGS_DEBUG " -g -O0")
 string(APPEND CMAKE_CXX_FLAGS_RELEASE " -O3 -march=native -funroll-loops -flto -fwhole-program -DNDEBUG")
 
@@ -19,6 +27,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        OFF)
 
 find_package(Threads REQUIRED)
+
+set(BUILD_TESTING false)
+set(JAEGERTRACING_BUILD_EXAMPLES false)
+add_subdirectory(external/jaeger-client-cpp)
 
 ### OBJECT LIBRARY
 set(LIB_NAME ShiViz_Trial_Lib)
@@ -46,6 +58,7 @@ target_link_libraries(
     ${LIB_NAME}
     PUBLIC
     Threads::Threads
+    jaegertracing
 )
 
 target_link_libraries(
