--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "external/jaeger-client-cpp"]
 	path = external/jaeger-client-cpp
 	url = https://github.com/jaegertracing/jaeger-client-cpp.git
+[submodule "external/philslib"]
+	path = external/philslib
+	url = https://github.com/CppPhil/philslib.git
+[submodule "external/optional"]
+	path = external/optional
+	url = https://github.com/TartanLlama/optional.git
+[submodule "external/expected"]
+	path = external/expected
+	url = https://github.com/TartanLlama/expected.git
